# ROS2

./: .gitignore  README.md  ROS2_Turtlesim1.odt  for installing humble ros2 on jammy  ros2_interactive_cheatsheet.html
bags/rosbag2_2025_08_23-23_36_45/: metadata.yaml  rosbag2_2025_08_23-23_36_45_0.db3
bags/test/: metadata.yaml  test_0.db3
ros2_ws/src/my_robot_controller/: package.xml  setup.py
ros2_ws/src/my_robot_controller/my_robot_controller/: draw_circle.py  my_first_node.py  pose_subscriber.py  turtle_controller.py
ros2_ws_udemy/src/my_cpp_pkg/: CMakeLists.txt  package.xml
ros2_ws_udemy/src/my_cpp_pkg/src/: my_first_node.cpp  robot_news_station.cpp  smartphone.cpp  template.cpp
ros2_ws_udemy/src/my_py_pkg/: package.xml  setup.py
ros2_ws_udemy/src/my_py_pkg/my_py_pkg/: activity_pub.py  activity_sub.py  add_two_ints_client_nooop.py  add_two_ints_client_oop.py  add_two_ints_server.py  my_first_node.py  number_counter.py  robot_news_station.py  smartphone.py  template.py
